# To_Do_App

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  voice_input.py
